CR-2004-02-03-1  Bugfix:    Fixed build for tru64 
                            (no prototype for "sge_get_execd_port()")

CR-2004-02-03-0  Testsuite: HTML compile output links of compile output HTML file
                            are now relative to HTML-directory.

MD-2004-02-02-2: Bugfix:    - Text 
                 Changed:   - inst_sgeee 

MD-2004-02-02-1: Bugfix:    - renamed sge_config to inst_sgeee
                            - moved sge_config_modules to util/inst_sgeee_modules
                            - adaptions of distinst 
                 Changed:   - sge_config, distinst

SG-2004-01-02-1: Bugfix:    reverted the changes from SG-2004-02-01-0. Reopend
                            the issue 476 again.

AD-2004-02-02-0: Cleanup:   qmaster threads now do call 'sge_qmaster_thread_
                            init()' at the beginning.
                 

MD-2004-02-02-0: Bugfix:    - DB installation 
                            - Test for local fs, new archs 
                            - Text
                 Changed:   - sge_config

CR-2004-02-02-0: Bugfix:    Fixed problem "can't get communication handle" when
                            application calls check_isalive() before a communication
                            handle is created. Now all communication handle are
                            created in prepare_enroll()
                 Review:    pending

JG-2004-02-02-0: Enhancem.: The event client layer handles shutdown of qmaster
                            (event QMASTER_GOES_DOWN). In this case, the event
                            client will try to reregister itself at the (new) 
                            qmaster.
                 Changed:   each eventclient (sge_schedd, qevent)
                 Review:    SG

AD-2004-02-02-0: Cleanup:   Did add function to initialize a qmaster thread.
                 Changed:   qmaster

CR-2004-02-02-0: Bugfix:    - fixed csp install: check for CRYPTO_ strings