@@ -91,17 +91,17 @@
 #define MSG_USER_INVALIDNAMEX_S             _MESSAGE(23048, _("invalid user name "SFQ"\n"))
 #define MSG_USER_NOHOMEDIRFORUSERX_S        _MESSAGE(23049, _("missing home directory for user "SFQ"\n"))
 #define MSG_ANSWER_GETUNIQUEHNFAILEDRESX_S  _MESSAGE(23050, _("getuniquehostname() failed resolving: "SFN"\n"))
-#define MSG_QUEUE_UNABLE2FINDQ_S        _MESSAGE(23051, _("unable to find queue "SFQ"\n"))
-#define MSG_OBJ_USER                  _MESSAGE(23052, _("user"))
-#define MSG_OBJ_GROUP                 _MESSAGE(23053, _("group"))
-#define MSG_OBJ_USERPRJ               _MESSAGE(23054, _("user/project"))
-#define MSG_OBJ_SHARETREE             _MESSAGE(23055, _("sharetree"))
-#define MSG_OBJ_USERSET               _MESSAGE(23056, _("userset"))
-#define MSG_JOB_PROJECT               _MESSAGE(23057, _("project"))
-#define MSG_SGETEXT_DOESNOTEXIST_SS             _MESSAGE(23058, _("denied: "SFN" "SFQ" does not exist\n"))
-#define MSG_SGETEXT_MUSTBEMANAGER_S             _MESSAGE(23059, _("denied: "SFQ" must be manager for this operation\n"))
-#define MSG_SGETEXT_MUSTBEOPERATOR_S            _MESSAGE(23060, _("denied: "SFQ" must be operator for this operation\n"))
-#define MSG_OPTIONWORKSONLYONJOB                _MESSAGE(23061, _("denied: the selected option works only on jobs and not on tasks\n"))
+#define MSG_QUEUE_UNABLE2FINDQ_S            _MESSAGE(23051, _("unable to find queue "SFQ"\n"))
+#define MSG_OBJ_USER                        _MESSAGE(23052, _("user"))
+#define MSG_OBJ_GROUP                       _MESSAGE(23053, _("group"))
+#define MSG_OBJ_USERPRJ                     _MESSAGE(23054, _("user/project"))
+#define MSG_OBJ_SHARETREE                   _MESSAGE(23055, _("sharetree"))
+#define MSG_OBJ_USERSET                     _MESSAGE(23056, _("userset"))
+#define MSG_JOB_PROJECT                     _MESSAGE(23057, _("project"))
+#define MSG_SGETEXT_DOESNOTEXIST_SS         _MESSAGE(23058, _("denied: "SFN" "SFQ" does not exist\n"))
+#define MSG_SGETEXT_MUSTBEMANAGER_S         _MESSAGE(23059, _("denied: "SFQ" must be manager for this operation\n"))
+#define MSG_SGETEXT_MUSTBEOPERATOR_S        _MESSAGE(23060, _("denied: "SFQ" must be operator for this operation\n"))
+#define MSG_OPTIONWORKSONLYONJOB            _MESSAGE(23061, _("denied: the selected option works only on jobs and not on tasks\n"))
 
 
 /*
